--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,10 @@
 [pytest]
 addopts = -v
 testpaths = tests
+
+
+
+
+; [pytest] — заголовок секции настроек.
+; addopts = -v — запускает тесты в verbose-режиме (показывает подробности).
+; testpaths = tests — указывает pytest, где искать тесты (в папке tests).
